JDK 17: Open jdk.internal.util.random for mockito/bytebuddy